--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,16 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 262 83% 58%;
   }
+
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+  }
 }
 
 @layer utilities {
@@ -102,5 +112,13 @@
   
   .element-hover {
     @apply ring-1 ring-blue-300;
+  }
+
+  /* Prevent text selection during drag */
+  .select-none {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 }
